[package]
name = "quiche-test"
version = "0.1.0"
authors = ["Bachue Zhou <bachue.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
log = "0.4.14"
mio = { version = "0.7.9", features = ["os-poll", "net"] }
quiche = "0.7.0"
ring = "0.16.20"
tap = "1.0.1"
